added parameter, changed description
testing the addition of a parameter

--- a/ui/narrative/methods/filter_contigs/display.yaml
+++ b/ui/narrative/methods/filter_contigs/display.yaml
@@ -37,5 +37,10 @@ parameters :
             Min Length Threshold
         short-hint : |
             All contigs below this length will be removed
+    random_parameter :
+        ui-name : |
+            A new parameter!
+        short-hint : |
+            I wonder if this parameter will be displayed
 description : |
-    <p>This is a simple method designed to illustrate the KBase SDK.</p>
+    <p>This is a simple method designed to illustrate the KBase SDK.  Testing modifications now.</p>
