--- a/ui/narrative/methods/filter_contigs/display.yaml
+++ b/ui/narrative/methods/filter_contigs/display.yaml
@@ -37,10 +37,10 @@ parameters :
             Min Length Threshold
         short-hint : |
             All contigs below this length will be removed
-    random_parameter :
+    notes :
         ui-name : |
-            A new parameter!
+            User notes to include with run
         short-hint : |
-            I wonder if this parameter will be displayed
+            Helpful to keep track of thought process
 description : |
     <p>This is a simple method designed to illustrate the KBase SDK.  Testing modifications now.</p>
